fix(swap): fix visibility of quote countdown in dark mode
Fixes brave/brave-browser#16748.

--- a/ui/app/css/itcss/components/swap.scss
+++ b/ui/app/css/itcss/components/swap.scss
@@ -630,9 +630,9 @@
     .quote {
       font-size: 0.8rem;
       border-radius: 42px;
-      background: #f2f3f4;
       padding: 7px 14px;
       font-weight: 700;
+      border: 1px solid;
 
       .countdown {
         font-weight: 400;
